# crios-dr-crowe-coder

./: .env.production  .env.railway.example  .env.railway.template  .env.vercel.example  .gitignore  .vercelignore  404_FIXED.md  BRANDING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_COMMANDS.md  DEPLOY_FRONTEND_NOW.sh  DEPLOY_NOW.md  DISCLAIMER.md  Dockerfile.api  Makefile  PHARMA_LICENSING.md  QUICK_START_RAILWAY.md  RAILWAY_CLI_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  README_DEPLOYMENT.md  START_HERE_DEPLOY.md  VERCEL_404_FIX.md  VERCEL_DEPLOYMENT.md  clusters.txt  demo_discovery.py  deploy-now.sh  deploy-railway-cli.sh  deploy-railway.sh  deploy-vercel.sh  deploy.sh  discover_compounds.py  docker-compose.yml  nixpacks.toml  pyproject.toml  railway-compose.yml  railway-services.json  railway-template.json  (+8 more)
.github/workflows/: deploy.yml
api/: README.md  requirements.txt
api/chemistry/: validate.py
backups/: descriptors.py.bak
config/: config.yaml  default_config.yaml  ethics.yaml  schemas.py
configs/: config.yaml  ethics.yaml  performance.yaml
contracts/: enterprise-license-template.md
crios/: __init__.py  exceptions.py
crios/algorithms/: library.py
crios/chem/: fingerprints.py  mol.py
crios/cli/: __init__.py  main.py
crios/cli/commands/: __init__.py  analyze.py  cluster.py  db_commands.py  export_commands.py  generate.py  init.py  process.py  prompt.py  score.py  search.py  validate.py  web_commands.py
crios/core/: __init__.py  compound.py  descriptors.py  molecule.py  similarity.py
crios/ethics/: filters.py
crios/io/: schemas.py
crios/scoring/: __init__.py  crowe_score.py  design.py
crios/web/: __init__.py  main.py  main_optimized.py
deploy/: README.md  deploy.sh  production.yml  railway-deploy.sh  vercel-deploy.sh
docs/: DrCroweCoder_WhitePaper.md  crios-nova.md  crowe-discovery-framework.md  ethical-licensing.md  founders-manifesto.md  immersive-ide.md  implementation-roadmap.md  pharma-pitch-deck.md  ~$CroweCoder_WhitePaper.md
licensing/: enterprise_tiers.md
platform/: README.md
platform/backend/: Dockerfile  Dockerfile.worker  app.py  auth.py  fly.toml  licensing.py  requirements.txt
platform/frontend/: .env.example  .env.production  Dockerfile  fly.toml  next.config.js  next.config.vercel.js  package.json  vercel.json
platform/frontend/components/: AgentNetwork.tsx  ImmersiveIDE.tsx  MoleculeViewer.tsx  PipelineFlow.tsx
platform/frontend/pages/: ide.tsx  index.tsx  pricing.tsx
platform/frontend/pages/api/: docs.ts  health.ts  validate.ts
prompts/: README-ORCHESTRATION.md  acceptance_criteria.md  developer_playbook.md  master_system_prompt.md  mini_examples.md  response_skeleton.md  user_prompt_templates.md
scripts/: crios.ps1  crios.sh  demo.py  dr-crowe.ps1  dr-crowe.sh  view-whitepaper.ps1
src/agents/: dr_crowe_coder.py  dr_crowe_coder.ts
src/analysis/: clustering.py  similarity.py
src/cli/: commands.py  commands_old.py
src/core/: __init__.py  descriptors.py  filters.py  molecule.py  validators.py
src/database/: api_clients.py  models.py  storage.py
src/io/: __init__.py  converters.py  readers.py  writers.py
src/ml/: compound_discovery_pipeline.py  data_integration.py
tests/: test_molecule.py
tests/test_data/: sample_compounds.smi
ui/: .env.production  .vercelignore  Dockerfile.ui  README.md  algorithm-studio.tsx  next.config.js  nova-dashboard.tsx  package.json  vercel.json
ui/app/: globals.css  layout.tsx  page.tsx
